--- a/lovely.toml
+++ b/lovely.toml
@@ -41,7 +41,7 @@ sources = [ "UI/ButtonCallbacks.lua" ]
 [[patches]]
 [patches.regex]
 target = "functions/button_callbacks.lua"
-pattern = "func = function\(\)\n      delay\(0.3\)"
+pattern = "func = function\\(\\)\\n      delay\\(0.3\\)"
 position = "at"
 payload = """func = function()
       if not G.screenwipe or not G.screenwipe.children or not G.screenwipe.children.particles then return true end
@@ -51,7 +51,7 @@ match_indent = true
 [[patches]]
 [patches.regex]
 target = "functions/button_callbacks.lua"
-pattern = "func = function\(\)\n      if G.screenwipecard then"
+pattern = "func = function\\(\\)\\n      if G.screenwipecard then"
 position = "at"
 payload = """func = function()
       if not G.screenwipe then return true end
@@ -61,7 +61,7 @@ match_indent = true
 [[patches]]
 [patches.regex]
 target = "functions/button_callbacks.lua"
-pattern = "func = function\(\)\n      G.screenwipe.children.particles:remove\(\)"
+pattern = "func = function\\(\\)\\n      G.screenwipe.children.particles:remove\\(\\)"
 position = "at"
 payload = """func = function()
       if not G.screenwipe or not G.screenwipe.children or not G.screenwipe.children.particles then return true end
