Improve saves UI controller support and boot preload
- Preload all save metadata at boot; add filename->entry/index maps
- Use QuickLoad-style restore unpack and suppress noisy shop card-area logs
- Add controller shortcuts (L3 step back, R3 toggle) and deterministic overlay navigation
- Refine saves overlay layout, focus snapping, and button pips

--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,9 @@ Steamodded/
 Balatro-History/
 BetterMouseandGamepad/
 QuickLoad/
+HandyBalatro/
 Contents/
 jkrs/
-AGENT.md
-CACHE_ENTRY_EXAMPLE.md
-CLICK_LOAD_FLOW.md
 save.*
 balatro_src/
 save_decoder.py
