feat: Add blind key support and UI enhancements
- Introduced ENTRY_BLIND_KEY constant in EntryConstants.lua for blind key storage.
- Updated Logger.lua to improve logging functionality with a new should_log function.
- Modified MetaFile.lua to read and write blind_key in meta files.
- Updated configuration options in config.lua for displaying blind images and animation settings.
- Enhanced AGENT.md documentation with blind information and sprite access details.
- Updated CACHE_ENTRY_EXAMPLE.md to include blind_key in cache entry structure.
- Added localization entries for new configuration options in both English and Chinese.
- Refined main.lua to improve the configuration UI layout, adding sections for auto-save triggers and display options.
- Updated asset files for blind icons in both 1x and 2x resolutions.

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ save.*
 balatro_src/
 save_decoder.py
 raw_icon/
+UnBlind/
+Blueprint/
+JokerDisplay/
 icon.png
 
 # Development scripts (local only)
